samples/_failures_safe/1761041931_9d1406_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f968687.c: In function ‘main’:
./samples/SAFE/__tmp_2f968687.c:156:45: error: missing terminating ' character
  156 |         if (input[0] == 'q' && (input[1] == '\
      |                                             ^~
./samples/SAFE/__tmp_2f968687.c:156:9: error: expected expression at end of input
  156 |         if (input[0] == 'q' && (input[1] == '\
      |         ^~
./samples/SAFE/__tmp_2f968687.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f968687.c:156:9: error: expected declaration or statement at end of input
